compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-3/pos/1.3.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SECTIONS: constant-literals, real-literals
 * PARAGRAPH: 3
 * SENTENCE: [1] The whole-number part and the exponent part may be omitted.
 * NUMBER: 3
 * DESCRIPTION: Real literals with omitted a whole-number part and an exponent mark without digits after it.
 */

val value = .0E
val value = .0e
val value = .00e-
val value = .000E+

val value = .0e
val value = .00E+
val value = .000e
val value = .0000E
val value = .0e+
val value = .00E-
val value = .000e
val value = .0000e
val value = .0E-

val value = .888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888e+
val value = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e
val value = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-
val value = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e+
